--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ APIStuff.hx
 art/build_x32-officialrelease.bat
 art/build_x64-officialrelease.bat
 art/test_x64-debug-officialrelease.bat
-
+.Access.lnk
 ### VS Code
 export/*
 .vscode/*
