--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ export/*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+source/flixel/temp files/FlxAnimationControllerOld.hx
+source/ShadersOld.hx
