--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
           haxelib set openfl 9.2.2 -always
           haxelib set flixel-addons 2.11.0 -always
           haxelib set flixel 5.2.2 -always
+          haxelib install flixel-ui 2.4.0 -always
           haxelib list
         shell: cmd
       - name: Create Version Tag
