--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: No, i won't add 6K+ to the engine. No, I won't add any other hardcoded shaders too, they're deprecated for the FRAG runtime support, don't even bother asking for those.
+description: No, i won't add 6K+ to the engine. No, the Stage Editor won't be added back either.
 labels: [enhancement]
 body:
   - type: textarea
